<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.4.5</version>
    <relativePath/>
  </parent>
  <groupId>pt.ulisboa.tecnico.socialsoftware</groupId>
  <artifactId>backend</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>Quizzes Tutor Backend</name>
  <description>Tutor System for the Software Architecture Course</description>
  <repositories>
    <repository>
      <id>fenix-ashes-maven-repository</id>
      <url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
    </repository>
  </repositories>
  <properties>
    <java.version>11</java.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <eventuate-client-java-spring.version>0.21.1.RELEASE</eventuate-client-java-spring.version>
    <eventuate-tram.version>0.29.0.RELEASE</eventuate-tram.version>
    <eventuate-tram-sagas.version>0.18.0.RELEASE</eventuate-tram-sagas.version>
  </properties>

  <!-- Allows multiple properties files-->
  <profiles>
    <profile>
      <id>dev</id>
      <properties>
        <activatedProperties>dev</activatedProperties>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>prod</id>
      <properties>
        <activatedProperties>prod</activatedProperties>
      </properties>
    </profile>
    <profile>
      <id>test</id>
      <properties>
        <activatedProperties>test</activatedProperties>
      </properties>
      <build>
        <plugins>
          <plugin>
            <!-- The gmavenplus plugin is used to compile Groovy code. To learn
                more about this plugin, visit https://github.com/groovy/GMavenPlus/wiki -->
            <groupId>org.codehaus.gmavenplus</groupId>
            <artifactId>gmavenplus-plugin</artifactId>
            <version>1.12.0</version>
            <executions>
              <execution>
                <goals>
                  <goal>addTestSources</goal>
                  <goal>compileTests</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M5</version>
            <configuration>
              <excludes>
                <exclude>**/*IT</exclude>
              </excludes>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>0.8.6</version>
            <executions>
              <execution>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
              <execution>
                <id>report</id>
                <phase>test</phase>
                <goals>
                  <goal>report</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>test-int</id>
      <properties>
        <activatedProperties>test-int</activatedProperties>
      </properties>
      <build>
        <plugins>
          <plugin>
            <!-- The gmavenplus plugin is used to compile Groovy code. To learn
                more about this plugin, visit https://github.com/groovy/GMavenPlus/wiki -->
            <groupId>org.codehaus.gmavenplus</groupId>
            <artifactId>gmavenplus-plugin</artifactId>
            <version>1.12.0</version>
            <executions>
              <execution>
                <goals>
                  <goal>addTestSources</goal>
                  <goal>compileTests</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M5</version>
            <configuration>
              <excludes>
                <exclude>**/*Test</exclude>
                <exclude>**/*Spec</exclude>
              </excludes>
            </configuration>
          </plugin>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>3.0.0-M5</version>
            <executions>
              <execution>
                <goals>
                  <goal>integration-test</goal>
                  <goal>verify</goal>
                </goals>
                <configuration>
                  <excludes>
                    <exclude>**/*Test</exclude>
                    <exclude>**/*Spec</exclude>
                  </excludes>
                  <includes>
                    <include>**/*IT</include>
                  </includes>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <dependencies>
    <!-- For Working with Json Web Tokens (JWT) -->
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-api</artifactId>
      <version>0.11.2</version>
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-impl</artifactId>
      <version>0.11.2</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-jackson</artifactId>
      <version>0.11.2</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>30.1-jre</version>
    </dependency>


    <!--<dependency>
      <groupId>io.microservices.tools.canvas</groupId>
      <artifactId>microservice-canvas-springmvc</artifactId>
      <version>0.5.2.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>io.microservices.tools.canvas</groupId>
      <artifactId>microservice-canvas-extractor-tram</artifactId>
      <version>0.5.2.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>io.microservices.tools.canvas</groupId>
      <artifactId>microservice-canvas-extractor-tram-sagas</artifactId>
      <version>0.5.2.RELEASE</version>
    </dependency>-->
  </dependencies>
  <modules>
    <module>tutor</module>
    <module>tournament</module>
    <module>apigateway</module>
    <module>answer</module>
    <module>common</module>
    <module>discussion</module>
    <module>execution</module>
    <module>impexp</module>
    <module>question</module>
    <module>questionsubmission</module>
    <module>quiz</module>
    <module>statistics</module>
    <module>user</module>
    <module>auth</module>
  </modules>
</project>
